[gd_scene load_steps=13 format=3 uid="uid://vtdgfqinr0j7"]

[ext_resource type="Script" path="res://scenes/Ui/inventory_ability_upgrade_card.gd" id="1_tjqci"]
[ext_resource type="PackedScene" uid="uid://dkjvpc2spqcpc" path="res://scenes/Component/RandomStreamPlayerComponent/random_stream_player_component.tscn" id="2_ag4sv"]
[ext_resource type="AudioStream" uid="uid://wp4h18dpe0py" path="res://assets/audio/sfx/upgrade card/card_click_1.wav" id="3_gj1ra"]
[ext_resource type="AudioStream" uid="uid://d0gd8hub5i28j" path="res://assets/audio/sfx/upgrade card/card_hover_1.wav" id="4_4cfl4"]
[ext_resource type="AudioStream" uid="uid://c22th3j1qr5rg" path="res://assets/audio/sfx/upgrade card/card_enter_1.wav" id="5_i236a"]
[ext_resource type="Texture2D" uid="uid://cp7cx47ygoemy" path="res://assets/ui/light.png" id="6_x00r5"]

[sub_resource type="Animation" id="Animation_keutj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0amh6"]
resource_name = "discard"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_awfe7"]
resource_name = "enter_screen"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.3, 1.3), Vector2(0.8, 0.8), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.025),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["card_enter", 0.0, 0.0],
"method": &"play_random_audio"
}]
}

[sub_resource type="Animation" id="Animation_n4l8d"]
resource_name = "on_card_hover"
length = 0.375
step = 0.025
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioPlayerComponent")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["card_hover", -5.0, 0.0],
"method": &"play_random_audio"
}]
}

[sub_resource type="Animation" id="Animation_5ts1y"]
resource_name = "on_cursor_exit"
length = 0.375
step = 0.025

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cgyji"]
_data = {
"RESET": SubResource("Animation_keutj"),
"discard": SubResource("Animation_0amh6"),
"enter_screen": SubResource("Animation_awfe7"),
"on_card_hover": SubResource("Animation_n4l8d"),
"on_cursor_exit": SubResource("Animation_5ts1y")
}

[node name="InventoryAbilityUpgradeCard" type="PanelContainer" groups=["upgrade_card"]]
custom_minimum_size = Vector2(150, 150)
offset_right = 215.0
offset_bottom = 200.0
pivot_offset = Vector2(107, 100)
size_flags_horizontal = 3
script = ExtResource("1_tjqci")

[node name="AudioPlayerComponent" parent="." instance=ExtResource("2_ag4sv")]
bus = &"Sfx"
min_pitch = 1.0
max_pitch = 1.0
audio_stream_list = Array[AudioStream]([ExtResource("3_gj1ra"), ExtResource("4_4cfl4"), ExtResource("5_i236a")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_cgyji")
}

[node name="HoverAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_cgyji")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 6

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_type_variation = &"TitleLabel"
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/shadow_outline_size = 3
text = "Name of the upgrade"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3

[node name="Description Label" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 0
text = "this is a very very very long description of how the upgrade actually functions!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SeperationLine" type="ColorRect" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(3, 2)
layout_mode = 2
color = Color(0.14902, 0.168627, 0.266667, 1)

[node name="AmountLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 8
text = "1/1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_x00r5")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_x00r5")

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_x00r5")

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_x00r5")

[node name="SeperationLine2" type="ColorRect" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
visible = false
custom_minimum_size = Vector2(3, 2)
layout_mode = 2
color = Color(0.14902, 0.168627, 0.266667, 1)

[node name="FlavourClassLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 8
text = "BOMBER"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
